--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,9 @@ clock_drift.png filter=lfs diff=lfs merge=lfs -text
 txt/habit_task_mr.tsv filter=lfs diff=lfs merge=lfs -text
 txt/habit_task_display.tsv filter=lfs diff=lfs merge=lfs -text
 txt/combined_habit_times.csv filter=lfs diff=lfs merge=lfs -text
+txt/luna/anti_task_display.tsv filter=lfs diff=lfs merge=lfs -text
+txt/luna/habit_task_display.tsv filter=lfs diff=lfs merge=lfs -text
+txt/luna/habit_task_mr.tsv filter=lfs diff=lfs merge=lfs -text
+txt/luna/anti_task_ filter=lfs diff=lfs merge=lfs -text
+txt/luna/anti_task_mr.tsv filter=lfs diff=lfs merge=lfs -text
+txt/eprime_times.tsv filter=lfs diff=lfs merge=lfs -text
