--- a/ttl_tracker/.gitattributes
+++ b/ttl_tracker/.gitattributes
@@ -2,3 +2,4 @@ TTL.png filter=lfs diff=lfs merge=lfs -text
 dod_start_times.png filter=lfs diff=lfs merge=lfs -text
 per_tr_diff_from_start.png filter=lfs diff=lfs merge=lfs -text
 per_tr_dod.png filter=lfs diff=lfs merge=lfs -text
+ttl_diff_dist.png filter=lfs diff=lfs merge=lfs -text
