--- a/.gitattributes
+++ b/.gitattributes
@@ -19,3 +19,4 @@ txt/luna/all_with_station.tsv filter=lfs diff=lfs merge=lfs -text
 argo/diff-of-diff.png filter=lfs diff=lfs merge=lfs -text
 afni_hrf.png filter=lfs diff=lfs merge=lfs -text
 luna/decon/bntpush-motor_thres-2.9103_tents.png filter=lfs diff=lfs merge=lfs -text
+txt/luna/diff-of-diff.csv filter=lfs diff=lfs merge=lfs -text
