--- a/.gitattributes
+++ b/.gitattributes
@@ -21,3 +21,4 @@ afni_hrf.png filter=lfs diff=lfs merge=lfs -text
 luna/decon/bntpush-motor_thres-2.9103_tents.png filter=lfs diff=lfs merge=lfs -text
 txt/luna/diff-of-diff.csv filter=lfs diff=lfs merge=lfs -text
 txt/BridgeTeenSceen/tasks_times.tsv filter=lfs diff=lfs merge=lfs -text
+txt/BridgeTeenSceen/mr_times.tsv filter=lfs diff=lfs merge=lfs -text
