--- a/.gitattributes
+++ b/.gitattributes
@@ -22,3 +22,6 @@ luna/decon/bntpush-motor_thres-2.9103_tents.png filter=lfs diff=lfs merge=lfs -t
 txt/luna/diff-of-diff.csv filter=lfs diff=lfs merge=lfs -text
 txt/BridgeTeenSceen/tasks_times.tsv filter=lfs diff=lfs merge=lfs -text
 txt/BridgeTeenSceen/mr_times.tsv filter=lfs diff=lfs merge=lfs -text
+bertocci/dod.png filter=lfs diff=lfs merge=lfs -text
+bertocci/EP_time-TTL.png filter=lfs diff=lfs merge=lfs -text
+bertocci/time_diffs.csv filter=lfs diff=lfs merge=lfs -text
